# programing

./: cub.py  lab4.cpp  lab5.cpp  lab5.sln  lab6.cpp  lab7.cpp  lab7.sln
3laba3/app/: CMakeLists.txt  main.cpp  product.cpp  product.hpp
3laba3/inc/: Commission.hpp  Ingredient.hpp
3laba3/src/: Commission.cpp
